...
                        reloader.toggle()
                    }
                    .background(Settings.shared.backgroundColor)
                    .foregroundColor(Settings.shared.textColor)
                    .font(.custom(Settings.shared.fontName, size: Settings.shared.fontSize))
                    .disabled(!item.isEditable)
                    .accessibilityIdentifier("editor.text")
                    .introspectTextView(customize: { textView in
                        self.textView = textView
                    })
            }
            if mode == .split {
                Color
...
                            isPresentedActivity.toggle()
                        },
                        label: {
                            Image(systemName: "square.and.arrow.up")
                        }
                    )
                    .accessibilityIdentifier("editor.share")
                    Button(
                        action: {
                            reloader.toggle()
                        },
                        label: {
                            Image(systemName: "arrow.clockwise")
...
