...
                                }
                            },
                            label: {
                                Image(systemName: "plus")
                            }
                        )
                        .accessibilityIdentifier("finder.add")
                        .confirmationDialog(
                            selectedItem?.url.lastPathComponent ?? "",
                            isPresented: $isPresentedAddDialog
                        ) {
                            Button("File") {
                                isPresentedFilePrompt.toggle()
...
